tests/rosetta/transpiler/Swift/constrained-genericity-3.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden1883576278/001/main.swift:13:49: error: cannot find 'value' in scope
11 | }
12 | func PeelFirst_eat(_ self: PeelFirst) {
13 |     print(_p((("mm, that " + String(describing: value)) + " was good!")))
   |                                                 `- error: cannot find 'value' in scope
14 | }
15 | 
