tests/rosetta/transpiler/Swift/constrained-genericity-3.swift
// Generated by Mochi transpiler v0.10.52 on 2025-08-01 22:11:17 GMT+7
import Foundation

func _p(_ v: Any?) -> String {
    if let val = v { return String(describing: val) }
    return "<nil>"
}

struct PeelFirst {
    var value: String
}
func PeelFirst_eat(_ self: PeelFirst) {
    print(_p((("mm, that " + String(describing: value)) + " was good!")))
}
